# needfinder-app

./: .gitignore  index.html  insight-creator.js  install-nightly-dev.sh  install-nightly-dev.ts  launchd.ts  main.py  overlay.html  package.json  pyproject.toml  test_script.sh  uninstall-nightly-dev.sh  vite.config.ts
assets/macos/: MicWatcher
electron/main/: consts.ts  index.ts  insight-creator.dev.js  insight-creator.js  ocr_check.py  record.py  record.spec  screenshot.py  screenshot.spec  sensitive_domains.py  uninstall-nightly-dev.ts  update.ts
electron/main/db/: db.ts
electron/main/ipc/: db.ts  insights.ts  ipc.ts
electron/main/services/: agent.ts  detectMicrophone.ts  inferActions.ts  jsonParse.ts  llm.ts  preprocessFiles.ts  processInsights.ts  prompts.ts  recording.ts
electron/main/windows/: tray.ts
electron/preload/: index.ts
src/: App.css  App.tsx  configs.ts  globals.css  index.css  main.tsx  prompts.ts  utils.ts  vite-env.d.ts
src/components/AgentQuery/: index.tsx
src/components/DefaultView/: index.tsx
src/components/History/: history.css  index.tsx
src/components/Home/: home.css  index.tsx
src/components/Insights/: index.ts  index.tsx  insights.css
src/components/NavBar/: index.tsx  navbar.css
src/components/Notification/: index.tsx  notification.css
src/components/Overlay/: index.tsx  overlay.css
src/components/Recorder/: index.tsx  recorder.css
src/components/RecordingPopup/: index.tsx  recording-popup.css
src/components/Settings/: index.tsx  settings.css
src/components/SidePanel/: index.tsx  (+1 more)
test/: e2e.spec.ts
(+4 files in other folders)
