[project]
name = "needfinder-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "certifi>=2026.1.4",
    "easyocr>=1.7.2",
    "mss>=10.1.0",
    "pillow>=12.0.0",
    "pynput>=1.8.1",
    "shapely>=2.1.2",
]
